[package]
name = "equihash"
description = "The Equihash Proof-of-Work function"
version = "0.1.0"
authors = ["Jack Grigg <jack@z.cash>"]
homepage = "https://github.com/gemlink/librustzcash"
repository = "https://github.com/gemlink/librustzcash"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
blake2b_simd = "1"
byteorder = "1"

[lib]
bench = false
